kubernetes-backup/kubearmor-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kubearmor
  namespace: kube-system
  labels:
    kubearmor-app: kubearmor
spec:
  selector:
    matchLabels:
      kubearmor-app: kubearmor
  template:
    metadata:
      labels:
        kubearmor-app: kubearmor
    spec:
      hostPID: true
      containers:
        - name: kubearmor
          image: kubearmor/kubearmor:latest
          securityContext:
            privileged: true
          args:
            - "- --criSocket=/var/run/crio/crio.sock
"
          volumeMounts:
            - name: cri-socket
              mountPath: /run/containerd/containerd.sock
              readOnly: true
            - name: sys-kernel-debug
              mountPath: /sys/kernel/debug
            - name: sys-fs-cgroup
              mountPath: /sys/fs/cgroup
      volumes:
        - name: cri-socket
          hostPath:
            path: /run/containerd/containerd.sock
            type: Socket
        - name: sys-kernel-debug
          hostPath:
            path: /sys/kernel/debug
        - name: sys-fs-cgroup
          hostPath:
            path: /sys/fs/cgroup
