kubernetes-backup/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wisecow-pod
spec:
  containers:
  - name: wisecow
    image: ankita1406/wisecow:latest
    ports:
    - containerPort: 80
