kubernetes-backup/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: LoadBalancer    # Use ClusterIP for internal access only
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 8080  # Container port
