kubernetes-backup/wisecow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  # Remove this deprecated annotation:
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx   # <-- use this instead
  rules:
  - host: wisecow.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
